Header added and styled but not yet responsive

--- a/caseStudies/template.html
+++ b/caseStudies/template.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>Case Study Template</h1>
     </main>
 </body>
 </html>
