Footer added to all pages but not yet made responsive

--- a/about.html
+++ b/about.html
@@ -24,5 +24,47 @@
     <main>
         <h1>About Us</h1>
     </main>
+    <footer>
+        <article>
+            <section>
+                <h2>Contact Us:</h2>
+                <ul>
+                    <li>Address Line 1</li>
+                    <li>Address Line 2</li>
+                    <li>Address Line 3</li>
+                    <li>Postcode</li>
+                    <li>Phone Number</li>
+                    <li>Email Address</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Quick Links:</h2>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Case Studies</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+                <div>
+                    <i class="fa-brands fa-facebook-f"><a href=""></a></i>                    
+                    <i class="fa-brands fa-twitter"><a href=""></a></i>
+                    <i class="fa-brands fa-instagram"><a href=""></a></i>
+                </div>
+            </section>
+            <section class="form">
+                <h2>Leave us a message:</h2>
+                <form action="">
+                    <label for="name">Name</label>
+                    <input type="text" name="name">
+                    <label for="email">Email Address:</label>
+                    <input type="email" name="email">
+                    <label for="message">Message:</label>
+                    <textarea name="message"></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </section>
+        </article>
+    </footer>
 </body>
 </html>
