Content added to the contact page

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/standards.css">
+    <link rel="stylesheet" href="stylesheets/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     <title>Home</title>
 </head>
@@ -23,6 +25,38 @@
     </header>
     <main>
         <h1>Contact Us</h1>
+        <article class="details">
+            <section>
+                <h2>Our address:</h2>
+                <ul>
+                    <li>Unit 6,</li> 
+                    <li>Antelope Industrial Estate,</li>
+                    <li>Rhydymwyn,</li>
+                    <li>Mold,</li>
+                    <li>CH7 5JH</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Our phone number:</h2>
+                <p>12345678912</p>
+            </section>
+            <section>
+                <h2>Our email address:</h2>
+                <p>enquiries@aparryconstruction.co.uk</p>
+            </section>
+        </article>
+        <article>
+            <h2>Leave us a message:</h2>
+            <form action="">
+                <label for="name">Name</label>
+                <input type="text" name="name">
+                <label for="email">Email Address:</label>
+                <input type="email" name="email">
+                <label for="message">Message:</label>
+                <textarea name="message"></textarea>
+                <input type="submit" value="Send">
+            </form>
+        </article>
     </main>
     <footer>
         <article>
