--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/standards.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     <title>Home</title>
 </head>
@@ -47,9 +48,9 @@
                     <li><a href="">Contact Us</a></li>
                 </ul>
                 <div>
-                    <i class="fa-brands fa-facebook-f"><a href=""></a></i>                    
-                    <i class="fa-brands fa-twitter"><a href=""></a></i>
-                    <i class="fa-brands fa-instagram"><a href=""></a></i>
+                    <a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>                    
+                    <a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </section>
             <section class="form">
