--- a/caseStudies.html
+++ b/caseStudies.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/standards.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     <title>Home</title>
 </head>
