--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,13 @@
 <body>
     <header>
         <img src="images/logo.png" alt="A Parry Construction logo">
-        <nav>
+        <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
+        <nav class="topnav" id="myTopNav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="caseStudies.html">Case Studies</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
     <main>
