--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     <li><a href="">Contact Us</a></li>
                 </ul>
                 <div>
-                    <i class="fa-brands fa-facebook-f"><a href=""></a></i>                    
-                    <i class="fa-brands fa-twitter"><a href=""></a></i>
-                    <i class="fa-brands fa-instagram"><a href=""></a></i>
+                    <a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>                    
+                    <a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </section>
             <section class="form">
