--- a/services.html
+++ b/services.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/standards.css">
+    <link rel="stylesheet" href="stylesheets/services.css">
+    <script src="menu.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
@@ -25,6 +27,21 @@
     </header>
     <main>
         <h1>Services</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore 
+            magna aliqua. Cras semper auctor neque vitae tempus quam 
+            pellentesque. Mauris a diam maecenas sed enim ut sem viverra. 
+            Sagittis id consectetur purus ut faucibus pulvinar elementum 
+            integer. Laoreet non curabitur gravida arcu. Tortor consequat 
+            id porta nibh. Neque convallis a cras semper auctor. Non nisi 
+            est sit amet facilisis magna etiam. Est ullamcorper eget nulla 
+            facilisi etiam.</p>
+        <article>
+            <div class="link">
+                <h2>Service Name</h2>
+                <i class="fa-solid fa-helmet-safety"></i>
+            </div>
+        </article>
     </main>
     <footer>
         <article>
@@ -49,9 +66,9 @@
                     <li><a href="">Contact Us</a></li>
                 </ul>
                 <div>
-                    <i class="fa-brands fa-facebook-f"><a href=""></a></i>                    
-                    <i class="fa-brands fa-twitter"><a href=""></a></i>
-                    <i class="fa-brands fa-instagram"><a href=""></a></i>
+                    <a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>                    
+                    <a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </section>
             <section class="form">
