Banner styling created, updated made to header and content added to the services page

--- a/about.html
+++ b/about.html
@@ -14,10 +14,9 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="A Parry Construction logo">
+        <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
         <nav class="topnav" id="myTopNav">
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="caseStudies.html">Case Studies</a></li>
