--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,20 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="A Parry Construction logo">
+        <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
         <nav class="topnav" id="myTopNav">
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="caseStudies.html">Case Studies</a></li>
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <main>
+    <div class="banner"></div>
+    <div class="title">
         <h1>Contact Us</h1>
+    </div>
+    <main>
         <article class="details">
             <section>
                 <h2>Our address:</h2>
