--- a/services.html
+++ b/services.html
@@ -11,36 +11,67 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
-    <title>Home</title>
+    <title>Services - A Parry Construction</title>
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="A Parry Construction logo">
+        <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
         <nav class="topnav" id="myTopNav">
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="caseStudies.html">Case Studies</a></li>
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <main>
+    <div class="banner"></div>
+    <div class="title">
         <h1>Services</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore 
-            magna aliqua. Cras semper auctor neque vitae tempus quam 
-            pellentesque. Mauris a diam maecenas sed enim ut sem viverra. 
-            Sagittis id consectetur purus ut faucibus pulvinar elementum 
-            integer. Laoreet non curabitur gravida arcu. Tortor consequat 
-            id porta nibh. Neque convallis a cras semper auctor. Non nisi 
-            est sit amet facilisis magna etiam. Est ullamcorper eget nulla 
-            facilisi etiam.</p>
-        <article>
-            <div class="link">
-                <h2>Service Name</h2>
-                <i class="fa-solid fa-helmet-safety"></i>
-            </div>
+    </div>
+    <main>
+        <p>A Parry Construction creates a commercial advantage 
+            for clients at every stage of a project with best-value, 
+            integrated infrastructure solutions. We plan, design, 
+            procure and manage projects on behalf of both 
+            public and private sector clients.</p>
+        <h2>Some of our services include: </h2>
+        <article class="linksContainer">
+            <a href="index.html" class="link">
+                <div>
+                    <i class="fa-solid fa-square-parking"></i>
+                    <p>Road and drainage, culverts and car parks</p>
+                </div>
+            </a>
+            <a class="link">
+                <div>
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <p>Earthworks and bulk excavation</p>
+                </div>
+            </a>
+            <a class="link">
+                <div>
+                    <i class="fa-solid fa-building"></i>
+                    <p>Reinforced concrete structures</p>
+                </div>
+            </a>
+            <a class="link">
+                <div>
+                    <i class="fa-solid fa-person-digging"></i>
+                    <p>Groundwork and Ducting</p>
+                </div>
+            </a>
+            <a class="link">
+                <div>
+                    <i class="fa-solid fa-screwdriver-wrench"></i>
+                    <p>Planned and reactive maintenance</p>
+                </div>
+            </a>
+            <a class="link">
+                <div>
+                    <i class="fa-solid fa-seedling"></i>
+                    <p>Landscaping and environmental</p>
+                </div>
+            </a>
         </article>
     </main>
     <footer>
