Individual service pages added

--- a/caseStudies/template.html
+++ b/caseStudies/template.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/standards.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="stylesheets/caseStudyTemplate.css">
     <script src="menu.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
@@ -14,18 +15,21 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="A Parry Construction logo">
+        <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
         <nav class="topnav" id="myTopNav">
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="caseStudies.html">Case Studies</a></li>
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
+    <div class="banner"></div>
+    <div class="title">
+        <h1>Contact Us</h1>
+    </div>
     <main>
-        <h1>Case Study Template</h1>
+        
     </main>
     <footer>
         <article>
