--- a/services.html
+++ b/services.html
@@ -36,37 +36,37 @@
             public and private sector clients.</p>
         <h2>Some of our services include: </h2>
         <article class="linksContainer">
-            <a href="index.html" class="link">
+            <a href="services/roads.html" class="link">
                 <div>
                     <i class="fa-solid fa-square-parking"></i>
                     <p>Road and drainage, culverts and car parks</p>
                 </div>
             </a>
-            <a class="link">
+            <a class="link" href="services/earthworks.html">
                 <div>
                     <i class="fa-solid fa-earth-americas"></i>
                     <p>Earthworks and bulk excavation</p>
                 </div>
             </a>
-            <a class="link">
+            <a class="link" href="services/concrete.html">
                 <div>
                     <i class="fa-solid fa-building"></i>
                     <p>Reinforced concrete structures</p>
                 </div>
             </a>
-            <a class="link">
+            <a class="link" href="services/groundwork.html">
                 <div>
                     <i class="fa-solid fa-person-digging"></i>
                     <p>Groundwork and Ducting</p>
                 </div>
             </a>
-            <a class="link">
+            <a class="link" href="services/maintenance.html">
                 <div>
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                     <p>Planned and reactive maintenance</p>
                 </div>
             </a>
-            <a class="link">
+            <a class="link" href="services/landscaping.html">
                 <div>
                     <i class="fa-solid fa-seedling"></i>
                     <p>Landscaping and environmental</p>
