Content added to the about us page

--- a/about.html
+++ b/about.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/standards.css">
+    <link rel="stylesheet" href="stylesheets/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="menu.js"></script>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
-    <title>Home</title>
+    <title>About us - A Parry Construction</title>
 </head>
 <body>
     <header>
@@ -22,9 +23,36 @@
             <li><a href="caseStudies.html">Case Studies</a></li>
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
-    </header>    
-    <main>
+    </header>
+    <div class="banner"></div>
+    <div class="title">
         <h1>About Us</h1>
+    </div>    
+    <main>
+        <section class="info">
+        <p>Operating since xxxx, we pride ourselves in having a highly 
+            skilled and experienced work force, completing all of our 
+            projects to an extremely high standard whilst always complying 
+            to current health and safety requlations. We offer Civil Engineering 
+            and groundwork services to both the Private and Public Sector.</p>
+        <p>We work closely with all our clients to offer any valued 
+            engineering expertise to help deliver works to a high quality.</p>
+        <p>We specialise in all types of Civil Engineering, Groundworks and 
+            Servicing, covering a wide area across North Wales and the North West.</p>
+        </section>
+        <section class="services">
+            <div>
+                <p>Some of the servies we offer include:</p>
+                <ul>
+                    <li>Road and drainage, culverts and car parks</li>
+                    <li>Earthworks and bulk excavation</li>
+                    <li>Reinforced concrete structures</li>
+                </ul>
+            </div>
+            <p>You can read more about these servies and the 
+                other services we can provide on our <a href="services.html">
+                Services page</a>.</p>
+        </section>
     </main>
     <footer>
         <article>
