About us content styled

--- a/about.html
+++ b/about.html
@@ -39,20 +39,19 @@
             engineering expertise to help deliver works to a high quality.</p>
         <p>We specialise in all types of Civil Engineering, Groundworks and 
             Servicing, covering a wide area across North Wales and the North West.</p>
+        <p>You can read more about all the services we can provide on our 
+            <a href="services.html">Services page</a>.</p>
         </section>
-        <section class="services">
-            <div>
-                <p>Some of the servies we offer include:</p>
-                <ul>
-                    <li>Road and drainage, culverts and car parks</li>
-                    <li>Earthworks and bulk excavation</li>
-                    <li>Reinforced concrete structures</li>
-                </ul>
-            </div>
-            <p>You can read more about these servies and the 
-                other services we can provide on our <a href="services.html">
-                Services page</a>.</p>
-        </section>
+        <aside class="services">
+            <img src="stylesheets/images/services-thumbnail.jpg" alt="digger carrying dirt">
+            <p>Some of the servies we offer include:</p>
+            <ul>
+                <li>Road and drainage, culverts and car parks</li>
+                <li>Earthworks and bulk excavation</li>
+                <li>Reinforced concrete structures</li>
+            </ul>
+            
+        </aside>
     </main>
     <footer>
         <article>
