banner and services page made responsive

--- a/services.html
+++ b/services.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/standards.css">
-    <link rel="stylesheet" href="stylesheets/services.css">
     <script src="menu.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="stylesheets/standards.css">
+    <link rel="stylesheet" href="stylesheets/services.css">
     <title>Services - A Parry Construction</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <div class="banner"></div>
-    <div class="title">
+    <div id="title" class="title">
         <h1>Services</h1>
     </div>
     <main>
