--- a/services/roads.html
+++ b/services/roads.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheets/standards.css">
     <link rel="stylesheet" href="../stylesheets/serviceTemplate.css">
-    <script src="menu.js"></script>
+    <script src="../menu.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
