--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                 </form>
             </section>
         </article>
+        <article class="second">
+            <section>
+                <p>&#169; A Parry Construction CO LTD</p>
+            </section>
+            <section>
+                <p>Website design and development by <a href="">Zara Bostock</a></p>
+            </section>
+        </article>
     </footer>
 </body>
 </html>
