--- a/services/template.html
+++ b/services/template.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <div class="banner"></div>
-    <div class="title">
+    <div id="title"  class="title">
         <h1>Contact Us</h1>
     </div>
     <main>
@@ -70,6 +70,14 @@
                     <textarea name="message"></textarea>
                     <input type="submit" value="Send">
                 </form>
+            </section>
+        </article>
+        <article class="second">
+            <section>
+                <p>&#169; A Parry Construction CO LTD</p>
+            </section>
+            <section>
+                <p>Website design and development by <a href="">Zara Bostock</a></p>
             </section>
         </article>
     </footer>
