--- a/services/groundwork.html
+++ b/services/groundwork.html
@@ -74,7 +74,7 @@
         </article>
         <article class="second">
             <section>
-                <p>&#169; A Parry Construction CO LTD</p>
+                <p><span>&#169;</span> A Parry Construction CO LTD</p>
             </section>
             <section>
                 <p>Website design and development by <a href="">Zara Bostock</a></p>
