Placeholder content added to case study page

--- a/caseStudies.html
+++ b/caseStudies.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/standards.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <script src="menu.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
-    <title>Home</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="menu.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
+        <link rel="stylesheet" href="stylesheets/standards.css">
+        <link rel="stylesheet" href="stylesheets/services.css">
+        <title>Case Studies - A Parry Construction</title>
+    </head>
 <body>
     <header>
         <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
@@ -23,8 +24,67 @@
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <main>
+    <div class="banner studies"></div>
+    <div id="title" class="title">
         <h1>Case Studies</h1>
+    </div>
+    <main>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            occaecat cupidatat non proident, sunt in culpa qui officia 
+            deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            occaecat cupidatat non proident, sunt in culpa qui officia 
+            deserunt mollit anim id est laborum.</p>
+            <hr class="divider">
+        <h2>All of our case studies can be found here: </h2>
+        <article class="linksContainer">
+            <a class="link" href="caseStudies/emergencyWorks.html" >
+                <div>
+                    <i class="fa-solid fa-triangle-exclamation"></i>
+                    <p>WCBC Emergency works</p>
+                </div>
+            </a>
+            <a class="link" href="">
+                <div>
+                    <i class="fa-solid fa-signs-post"></i>
+                    <p>FCC A55 Signs installation</p>
+                </div>
+            </a>
+            <a class="link" href="">
+                <div>
+                    <i class="fa-solid fa-lightbulb"></i>
+                    <p>CCBC Parc Eirias Lighting installation</p>
+                </div>
+            </a>
+            <a class="link" href="">
+                <div>
+                    <i class="fa-solid fa-info"></i>
+                    <p>Case study name</p>
+                </div>
+            </a>
+            <a class="link" href="">
+                <div>
+                    <i class="fa-solid fa-info"></i>
+                    <p>Case study name</p>
+                </div>
+            </a>
+            <a class="link" href="">
+                <div>
+                    <i class="fa-solid fa-info"></i>
+                    <p>Case study name</p>
+                </div>
+            </a>
+        </article>
     </main>
     <footer>
         <article>
