--- a/caseStudies/emergencyWorks.html
+++ b/caseStudies/emergencyWorks.html
@@ -25,8 +25,8 @@
         </nav>
     </header>
     <div class="banner emergencyWorks"></div>
-    <div id="title"  class="title emergencyTitle">
-        <h1>WCBC Emergency Works</h1>
+    <div id="title"  class="title">
+        <h1 class="emergencyTitle">WCBC Emergency Works</h1>
     </div>
     <main>
         <article>
