Content added for the A55 and eirias park case studies

--- a/caseStudies.html
+++ b/caseStudies.html
@@ -54,13 +54,13 @@
                     <p>WCBC Emergency works</p>
                 </div>
             </a>
-            <a class="link" href="">
+            <a class="link" href="caseStudies/A55Sign.html">
                 <div>
                     <i class="fa-solid fa-signs-post"></i>
                     <p>FCC A55 Signs installation</p>
                 </div>
             </a>
-            <a class="link" href="">
+            <a class="link" href="caseStudies/eiriasPark.html">
                 <div>
                     <i class="fa-solid fa-lightbulb"></i>
                     <p>CCBC Parc Eirias Lighting installation</p>
@@ -91,10 +91,10 @@
             <section>
                 <h2>Contact Us:</h2>
                 <ul>
-                    <li>Address Line 1</li>
-                    <li>Address Line 2</li>
-                    <li>Address Line 3</li>
-                    <li>Postcode</li>
+                    <li>Unit 6, Antelope Industrial Estate,</li>
+                    <li>Rhydymwyn,</li>
+                    <li>Mold,</li>
+                    <li>CH7 5JH</li>
                     <li>Phone Number</li>
                     <li>Email Address</li>
                 </ul>
