--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <section>
                 <h2>Contact Us:</h2>
                 <ul>
-                    <li>Address Line 1</li>
-                    <li>Address Line 2</li>
-                    <li>Address Line 3</li>
-                    <li>Postcode</li>
+                    <li>Unit 6, Antelope Industrial Estate,</li>
+                    <li>Rhydymwyn,</li>
+                    <li>Mold,</li>
+                    <li>CH7 5JH</li>
                     <li>Phone Number</li>
                     <li>Email Address</li>
                 </ul>
