--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <h2>Our address:</h2>
                 <ul>
                     <li>Unit 6,</li> 
-                    <li>Antelope Industrial Estate,</li>
+                    <li>Antelope Industrial Estate,,</li>
                     <li>Rhydymwyn,</li>
                     <li>Mold,</li>
                     <li>CH7 5JH</li>
@@ -67,10 +67,10 @@
             <section>
                 <h2>Contact Us:</h2>
                 <ul>
-                    <li>Address Line 1</li>
-                    <li>Address Line 2</li>
-                    <li>Address Line 3</li>
-                    <li>Postcode</li>
+                    <li>Unit 6, Antelope Industrial Estate,</li>
+                    <li>Rhydymwyn,</li>
+                    <li>Mold,</li>
+                    <li>CH7 5JH</li>
                     <li>Phone Number</li>
                     <li>Email Address</li>
                 </ul>
