Overall design changes made to the services page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <h2>Our address:</h2>
                 <ul>
                     <li>Unit 6,</li> 
-                    <li>Antelope Industrial Estate,,</li>
+                    <li>Antelope Industrial Estate,</li>
                     <li>Rhydymwyn,</li>
                     <li>Mold,</li>
                     <li>CH7 5JH</li>
@@ -43,15 +43,13 @@
             <section>
                 <h2>Our phone number:</h2>
                 <p>12345678912</p>
-            </section>
-            <section>
                 <h2>Our email address:</h2>
                 <p>enquiries@aparryconstruction.co.uk</p>
             </section>
         </article>
         <article>
             <h2>Leave us a message:</h2>
-            <form action="">
+            <form method="POST" action="contact.php" id="contactForm">
                 <label for="name">Name</label>
                 <input type="text" name="name">
                 <label for="email">Email Address:</label>
