--- a/services.html
+++ b/services.html
@@ -24,27 +24,23 @@
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner services"></div>
-    <div id="title" class="title">
-        <h1>Services</h1>
-    </div>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna 
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit 
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-            occaecat cupidatat non proident, sunt in culpa qui officia 
-            deserunt mollit anim id est laborum.</p>
-        <p>A Parry Construction creates a commercial advantage 
-            for clients at every stage of a project with best-value, 
-            integrated infrastructure solutions. We plan, design, 
-            procure and manage projects on behalf of both 
-            public and private sector clients.</p>
-            <hr class="divider">
-        <h2>Some of our services include: </h2>
+        <article class="banner">
+            <h1>Services</h1>
+            <img src="stylesheets/images/services-header.jpg" alt="construction workers working on a road">
+        </article>
+        <article class="grey info">
+            <img src="stylesheets/images/placeholder.png" alt="">
+            <div>
+                <p>A Parry Construction creates a commercial advantage 
+                    for clients at every stage of a project with best-value, 
+                    integrated infrastructure solutions. We plan, design, 
+                    procure and manage projects on behalf of both 
+                    public and private sector clients.</p>
+            </div>
+        </article>
         <article class="linksContainer">
+            <h2>Some of our services include: </h2>
             <a href="services/roads.html" class="link">
                 <div>
                     <i class="fa-solid fa-square-parking"></i>
