--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/standards.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="menu.js"></script>
@@ -13,6 +14,12 @@
     <title>Home</title>
 </head>
 <body>
+    <section class="homeOpen">
+        <img src="stylesheets/images/services-header.jpg" alt="">
+        <div>
+            <a href="#myTopNav"><i class="fa-solid fa-angles-down"></i></a>
+        </div>
+    </section>
     <header>
         <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
@@ -24,7 +31,19 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+        <article class="awards">
+            <img src="stylesheets/images/creditations/Parry's ISO Logo 1.png" alt="">
+            <img src="stylesheets/images/creditations/chas.png" alt="">
+            <img src="stylesheets/images/creditations/cpcs.png" alt="">
+            <img src="stylesheets/images/creditations/cscs.png" alt="">
+            <img src="stylesheets/images/creditations/swqr.png" alt="">
+        </article>
     </main>
     <footer>
         <article>
