CSS animation added to the home page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <section class="homeOpen">
         <img src="stylesheets/images/services-header.jpg" alt="">
         <div>
-            <a href="#myTopNav"><i class="fa-solid fa-angles-down"></i></a>
+            <a href="#header"><i class="fa-solid fa-angles-down"></i></a>
         </div>
     </section>
     <header>
-        <a href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
+        <a id="header" href="index.html"><img src="stylesheets/images/logo.png" alt="A Parry Construction logo" ></a>
         <a onclick="openMenu()" class="icon"><i class="fa-solid fa-bars"></i></a>
         <nav class="topnav" id="myTopNav">
             <li><a href="about.html">About Us</a></li>
